--- a/templates/login.html
+++ b/templates/login.html
@@ -4,14 +4,14 @@
 {% endblock %} {% block content %}
 <div class="min-h-screen flex items-center justify-center">
   <div
-    class="w-full max-w-md bg-white/50 rounded-xl shadow-xl p-8 border border-white/10"
+    class="w-full max-w-md bg-white/50 rounded-xl shadow-xl p-8 border border-white/10 height"
   >
     <div class="container-head">
       <h1>Welcome Back</h1>
-      <p class="grey">Sign in to your account</p>
+      <p class="black">Sign in to your account</p>
     </div>
     <form action="{{url_for('main.login')}}" method="post" class="space-y-6">
-      <div class="grey">
+      <div class="black">
         <label class="block text-sm font-medium mb-2">Username</label>
         <div class="relative">
           <div
@@ -39,7 +39,7 @@
           />
         </div>
       </div>
-      <div class="grey">
+      <div class="black">
         <label class="block text-sm font-medium mb-2">Password</label>
         <div class="relative">
           <div
