--- a/templates/expenses.html
+++ b/templates/expenses.html
@@ -4,6 +4,10 @@
 <div id="page-content-wrapper">
     {% include 'nav.html' %}
     <div class="container-fluid">
+        <div class="text-center">
+            <a href="/incomes"><button id="toggle-income" class="btn btn-primary">Show Income</button></a>
+            <button id="toggle-expenses" class="btn btn-secondary">Show Expenses</button>
+        </div>
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">Expenses</h1>
         </div>
