--- a/templates/incomes.html
+++ b/templates/incomes.html
@@ -6,6 +6,10 @@
 
     <!-- Page content -->
     <div class="container-fluid">
+        <div class="text-center">
+            <button id="toggle-income" class="btn btn-secondary">Show Income</button>
+            <a href="/expenses"><button id="toggle-expenses" class="btn btn-primary">Show Expenses</button></a>
+        </div>
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
         </div>
