--- a/templates/base.html
+++ b/templates/base.html
@@ -16,23 +16,17 @@
         <!-- Sidebar -->
         <div class="border-end bg-white" id="sidebar-wrapper">
             <div class="sidebar-heading border-bottom bg-light">
-                <i class="fas fa-chart-line me-2"></i>Finance Tracker
+                <i class="fas fa-chart-line me-2"></i>SwiftTax
             </div>
             <div class="list-group list-group-flush">
                 <a href="{{ url_for('main.dashboard') }}" class="list-group-item list-group-item-action">
                     <i class="fas fa-tachometer-alt me-2"></i>Dashboard
                 </a>
                 <a href="{{ url_for('main.expenses') }}" class="list-group-item list-group-item-action">
-                    <i class="fas fa-money-bill-wave me-2"></i>Expenses
+                    <i class="fas fa-money-bill-wave me-2"></i>Bookkeeping
                 </a>
-                <a href="{{ url_for('main.incomes') }}" class="list-group-item list-group-item-action">
-                    <i class="fas fa-hand-holding-usd me-2"></i>Incomes
-                </a>
-                <a href="{{ url_for('main.add_expense') }}" class="list-group-item list-group-item-action">
-                    <i class="fas fa-plus-circle me-2"></i>Add Expense
-                </a>
-                <a href="{{ url_for('main.add_income') }}" class="list-group-item list-group-item-action">
-                    <i class="fas fa-plus-circle me-2"></i>Add Income
+                <a href="{{ url_for('main.expenses') }}" class="list-group-item list-group-item-action">
+                    <i class="fas fa-money-bill-wave me-2"></i>GST Filing
                 </a>
             </div>
         </div>
