--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 {% endblock %} {% block content %}
 <div class="min-h-screen flex items-center justify-center">
   <div
-    class="w-full max-w-md bg-white/50 rounded-xl shadow-xl p-8 border border-white/10 height"
+    class="w-full max-w-md bg-white/50 rounded-xl shadow-xl p-8 border border-white/10"
   >
     <div class="container-head">
       <h1>Welcome Back</h1>
