--- a/templates/register.html
+++ b/templates/register.html
@@ -4,10 +4,10 @@
 {% endblock %} {% block content %}
 <div class="min-h-screen flex items-center justify-center">
   <div
-    class="w-full max-w-md bg-white/50 rounded-xl shadow-xl p-8 border border-white/10 height"
+    class="w-full max-w-md bg-white/50 rounded-xl shadow-xl p-8 border border-white/10"
   >
     <div class="container-head">
-      <h1>Welcome To SwiftTax</h1>
+      <h1>Welcome</h1>
       <p class="black">Create your new account</p>
     </div>
     <form action="{{url_for('main.register')}}" method="post" class="space-y-5">
