--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,16 @@
 </head>
 
 <body>
+    <div style="position: fixed;
+        bottom: 50px;
+        right: 0;
+        width: 50px;
+        background-size: auto;
+        background-color: #006eff;
+        border: 3px solid aqua;
+        background-image: url('../static/assets/bot.jpg');">
+    <a style="text-decoration: none;align-items: center;color: white" href="https://f1f98fa4e99491aba3.gradio.live/">Taxy bot</a>
+    </div>
     <div class="d-flex" id="wrapper">
         <!-- Sidebar -->
         <div class="border-end bg-white" id="sidebar-wrapper">
