--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,14 @@
 {% block style %}
 <link rel="stylesheet" href="../static/register.css" />
 {% endblock %} {% block content %}
+<nav class="pt-6 lg:px-12 flex items-center justify-between">
+  <h1
+    class="text-4xl font-bold text-white cursor-pointer"
+    onclick="location.href='/'"
+  >
+    SwiftTax
+  </h1>
+</nav>
 <div class="min-h-screen flex items-center justify-center">
   <div
     class="w-full max-w-md bg-white/50 rounded-xl shadow-xl p-8 border border-white/10"
